Thu Feb 24 14:36:45 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added locking to OmStem

Thu Feb 24 14:18:29 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Cleaned up the public/private separation in OmEnquire{Internal}

	* Added exclusive locks to all public methods

Wed Feb 23 19:00:10 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added initial pthread locking support.  More does need to be
	  done.

Wed Feb 23 17:33:43 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a test "includetest" which simply checks that a program
	  which includes all headers in the project compiles.

Wed Feb 23 14:46:16 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Muscat36 backend now replaces DA backend.
	  Should be able to cope with both flimsy and heavy duty DA files.
	  DB stuff will be added shortly.

Wed Feb 23 14:44:58 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added (mostly private unimplemented) copy-constructors and
	  assignment operators to several classes.  Also added some
	  virtual destructors where needed.

Mon Feb 21 18:07:14 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Attempts to build a query with a boolean subquery throws an
	  exception for now.

Mon Feb 21 15:33:10 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added test for OmEnquire::get_matching_terms()

	* Fixed OmEnquire::get_matching_terms

Mon Feb 21 14:38:30 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Made OmQuery::get_terms() public, tightened the specification,
	  and made it conform to the specification.
	
	* Added a test for the above to apitest

	* Fixed a bug in OmQuery::initialise_from_copy() to make the above
	  test work.

Fri Feb 18 18:06:21 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Databases now have a get_doclength() method, to return the length
	  of a given document.  There may be efficiency issues with using