@@ -1,3 +1,10 @@
+Thu Feb 24 16:12:16 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Changed DBPostlist to LeafPostlist.
+
+	* Added DBDatabase and related classes, for reading DB format (old
+	  muscat) databases.
+
 Thu Feb 24 14:36:45 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Added locking to OmStem
